--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "antd": "^4.24.2",
+        "classname": "^0.0.0",
         "craco-alias": "^3.0.1",
         "craco-antd": "^2.0.0",
         "craco-css-modules": "^1.0.1",
         "react": "^18.2.0",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
         "typescript": "^4.4.2",
